--- a/Week1/Day 2/Practice/styling/index.html
+++ b/Week1/Day 2/Practice/styling/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>styling</title>
 </head>
 <body>
     <div>
-    <h1>My<span>Cloud</span></h1>
-    <h2>Completed Project</h2>
-    <h3>Contact us</h3>
+      <h1>My<span>Cloud</span></h1>
+    </div>
+    <div>
+        <h2>Completed Project :</h2>
+    </div>
+    <div>
+        <h3>Contact us</h3>
+    </div>
+    
     
 </body>
 </html>
