--- a/Week1/Day 3/Core/GitHub_Blocks/GitHub_Blocks.html
+++ b/Week1/Day 3/Core/GitHub_Blocks/GitHub_Blocks.html
@@ -6,20 +6,22 @@
     </head>
     <body>
          <h1>GitHub Blocks</h1>
-     <div class="box1">
-        <img  src="filmtocats.png" alt="image1" >
-        <img  src="Fintechtocat.png" alt="image2">
-        <img  src="godotocat.png" alt="image3">
-     </div>
-        <div class="box2">
-            <img  src="manufacturetocat.png" alt="image4">
-            <img  src="mona-the-rivetertocat.png" alt="image5">
-        </div>
-        <div class="box3">
-        <img  src="NUX_Octodex.gif" alt="image6">
-        <img  src="saint_nictocat.jpg" alt="image7">
-        <img  src="yogitocat.png" alt="image8">
-     </div>
+         <div class="content">
+              <div class="box1">
+                   <img id="img" src="assets/filmtocats.png" alt="image1" >
+                   <img id="img" src="assets/Fintechtocat.png" alt="image2">
+                   <img id="img" src="assets/godotocat.png" alt="image3">
+              </div>
+              <div class="box2">
+                   <img id="img" src="assets/manufacturetocat.png" alt="image4">
+                   <img id="img" src="assets/mona-the-rivetertocat.png" alt="image5">
+              </div>
+              <div class="box3">
+                   <img id="img" src="assets/NUX_Octodex.gif" alt="image6">
+                   <img id="img" src="assets/saint_nictocat.jpg" alt="image7">
+                   <img id="img" src="assets/yogitocat.png" alt="image8">
+             </div>
+         </div>
      <h1></h1>
     </body>
 </html>
